Fix remaining Math.clamp patterns in BaseWatchingNowUI and ResponsiveCardGrid